--- a/user-data.yml
+++ b/user-data.yml
@@ -2,5 +2,7 @@
 apt-get -y update
 apt-get -y install python-pip
 pip install docker-compose
+cd ~
+wget https://raw.githubusercontent.com/mar664/phantomjs-selenium-hub/master/docker-compose.yml
 docker-compose scale nodephjs=10
 docker-compose up -d
